@@ -2,20 +2,24 @@ package stryker4s
 
 import java.nio.file.Paths
 
+import org.mockito.MockitoSugar
+import org.mockito.captor.ArgCaptor
+import org.scalatest.Inside
 import stryker4s.config.Config
-import stryker4s.model.{Killed, Mutant}
+import stryker4s.model.{Killed, Mutant, MutantRunResults}
 import stryker4s.mutants.Mutator
 import stryker4s.mutants.applymutants.{ActiveMutationContext, MatchBuilder, StatementTransformer}
 import stryker4s.mutants.findmutants.{FileCollector, MutantFinder, MutantMatcher}
-import stryker4s.run.process.{Command, ProcessMutantRunner, ProcessRunner}
+import stryker4s.report.Reporter
+import stryker4s.run.process.{Command, ProcessMutantRunner}
 import stryker4s.run.threshold.SuccessStatus
 import stryker4s.scalatest.{FileUtil, LogMatchers}
 import stryker4s.testutil.Stryker4sSuite
-import stryker4s.testutil.stubs._
+import stryker4s.testutil.stubs.{TestProcessRunner, TestSourceCollector}
 
 import scala.util.Success
 
-class Stryker4sTest extends Stryker4sSuite with LogMatchers {
+class Stryker4sTest extends Stryker4sSuite with LogMatchers with MockitoSugar with Inside {
 
   describe("run") {
     it("should call mutate files and report the results") {
@@ -24,22 +28,30 @@ class Stryker4sTest extends Stryker4sSuite with LogMatchers {
       val testFiles = Seq(file)
       val testSourceCollector = new TestSourceCollector(testFiles)
       val testProcessRunner = TestProcessRunner(Success(1), Success(1), Success(1), Success(1))
-      val testMutantRunner =
-        new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, new FileCollector(testProcessRunner))
-      val testReporter = new TestReporter
+      val reporterMock = mock[Reporter]
+      val testMutantRunner = new ProcessMutantRunner(Command("foo", "test"),
+                                                     testProcessRunner,
+                                                     new FileCollector(testProcessRunner),
+                                                     reporterMock)
 
       val sut = new Stryker4s(
         testSourceCollector,
         new Mutator(new MutantFinder(new MutantMatcher),
                     new StatementTransformer,
                     new MatchBuilder(ActiveMutationContext.sysProps)),
-        testMutantRunner,
-        testReporter
+        testMutantRunner
       )
 
       val result = sut.run()
 
-      val reportedResults = testReporter.testMutantReporter.lastCall.value.results
+      val startCaptor = ArgCaptor[Mutant]
+      verify(reporterMock, times(4)).reportMutationStart(startCaptor)
+      startCaptor.values should matchPattern {
+        case List(Mutant(0, _, _, _), Mutant(1, _, _, _), Mutant(2, _, _, _), Mutant(3, _, _, _)) =>
+      }
+      val runResultCaptor = ArgCaptor[MutantRunResults]
+      verify(reporterMock).reportRunFinished(runResultCaptor)
+      val reportedResults = runResultCaptor.value.results
 
       val expectedPath = Paths.get("simpleFile.scala")
 
@@ -56,8 +68,9 @@ class Stryker4sTest extends Stryker4sSuite with LogMatchers {
       implicit val conf: Config = Config()
       val testSourceCollector = new TestSourceCollector(Seq())
       val testProcessRunner = TestProcessRunner()
-      val testMutantRunner = new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, testSourceCollector)
-      val testReporter = new TestReporter
+      val reporterMock = mock[Reporter]
+      val testMutantRunner =
+        new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, testSourceCollector, reporterMock)
 
       val sut: Stryker4s =
         new Stryker4s(
@@ -65,8 +78,7 @@ class Stryker4sTest extends Stryker4sSuite with LogMatchers {
           new Mutator(new MutantFinder(new MutantMatcher),
                       new StatementTransformer,
                       new MatchBuilder(ActiveMutationContext.sysProps)),
-          testMutantRunner,
-          testReporter
+          testMutantRunner
         ) {
 
           override def jvmMemory2GBOrHigher: Boolean = false
@@ -74,17 +86,17 @@ class Stryker4sTest extends Stryker4sSuite with LogMatchers {
 
       sut.run()
 
-      "The JVM has less than 2GB memory available. We advise increasing this to 4GB when running Stryker4s." shouldBe loggedAsWarning
-      "This can be done in sbt by setting an environment variable: SBT_OPTS=\"-XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=4G -Xmx4G\" " shouldBe loggedAsWarning
-      "Visit https://github.com/stryker-mutator/stryker4s#memory-usage for more info." shouldBe loggedAsWarning
+      "The JVM has less than 2GB memory available. We advise to allocate 4GB memory when running Stryker4s." shouldBe loggedAsWarning
+      "Visit https://github.com/stryker-mutator/stryker4s#memory-usage for more info on how to allocate more memory to the JVM." shouldBe loggedAsWarning
     }
 
     it("should not log a warning when JVM max memory is high enough") {
       implicit val conf: Config = Config()
       val testSourceCollector = new TestSourceCollector(Seq())
       val testProcessRunner = TestProcessRunner()
-      val testMutantRunner = new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, testSourceCollector)
-      val testReporter = new TestReporter
+      val reporterMock = mock[Reporter]
+      val testMutantRunner =
+        new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, testSourceCollector, reporterMock)
 
       val sut: Stryker4s =
         new Stryker4s(
@@ -92,8 +104,7 @@ class Stryker4sTest extends Stryker4sSuite with LogMatchers {
           new Mutator(new MutantFinder(new MutantMatcher),
                       new StatementTransformer,
                       new MatchBuilder(ActiveMutationContext.sysProps)),
-          testMutantRunner,
-          testReporter
+          testMutantRunner
         ) {
 
           override def jvmMemory2GBOrHigher: Boolean = true
@@ -101,9 +112,8 @@ class Stryker4sTest extends Stryker4sSuite with LogMatchers {
 
       sut.run()
 
-      "The JVM has less than 2GB memory available. We advise increasing this to 4GB when running Stryker4s." should not be loggedAsWarning
-      "This can be done in sbt by setting an environment variable: SBT_OPTS=\"-XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=4G -Xmx4G\" " should not be loggedAsWarning
-      "Visit https://github.com/stryker-mutator/stryker4s#memory-usage for more info." should not be loggedAsWarning
+      "The JVM has less than 2GB memory available. We advise to allocate 4GB memory when running Stryker4s." should not be loggedAsWarning
+      "Visit https://github.com/stryker-mutator/stryker4s#memory-usage for more info on how to allocate more memory to the JVM." should not be loggedAsWarning
     }
   }
 }
